--- a/loginPage.fxml
+++ b/loginPage.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
@@ -64,9 +65,11 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="loginButton" layoutX="296.0" layoutY="242.0" mnemonicParsing="false" text="Login" />
-                        <TextField layoutX="245.0" layoutY="104.0" text="Username" />
-                        <TextField layoutX="245.0" layoutY="162.0" text="Password" />
+                        <Button fx:id="loginButton" layoutX="297.0" layoutY="212.0" mnemonicParsing="false" text="Login" />
+                        <TextField fx:id="userField" layoutX="245.0" layoutY="104.0" text="Username" />
+                        <TextField fx:id="passwordField" layoutX="245.0" layoutY="162.0" text="Password" />
+                        <Button fx:id="registerButton" layoutX="356.0" layoutY="261.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="68.0" text="Register" />
+                        <Text layoutX="199.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Don't have an account yet?" wrappingWidth="174.13671875" />
                      </children>
                   </AnchorPane>
               </content>
