Animal Information FXML

--- a/src/sample/HomePageStyle.css
+++ b/src/sample/HomePageStyle.css
@@ -12,9 +12,9 @@
   -fx-background-color: #EFEFEF;
 }
 
-.split-pane{
-  -fx-background-image: url(catdog1.jpg);
-}
+/*.split-pane{*/
+/*  -fx-background-image: url(catdog1.jpg);*/
+/*}*/
 
 .list-view{
   -fx-font-family: "Times New Roman";
