--- a/src/sample/AddAnimal.fxml
+++ b/src/sample/AddAnimal.fxml
@@ -12,54 +12,58 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0"  xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.AddAnimal">
-   <children>
-      <MenuButton alignment="CENTER" contentDisplay="RIGHT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Adoptable Dogs" AnchorPane.bottomAnchor="365.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <font>
-            <Font size="18.0" />
-         </font>
-         <items>
-            <MenuItem fx:id="menuItem_HomePage" mnemonicParsing="false" text="Home" />
-            <Menu mnemonicParsing="false" text="Adoptable">
-               <items>
-                  <MenuItem fx:id="menuItem_AdoptableDogs" mnemonicParsing="false" text="Adoptable Dogs" />
-                  <MenuItem fx:id="menuItem_AdoptableCats" mnemonicParsing="false" text="Adoptable Cats" />
-               </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Animal Info">
-               <items>
-                  <MenuItem fx:id="menuItem_EditAnimal" mnemonicParsing="false" text="Edit Animal Info" />
-                  <MenuItem fx:id="menuItem_SearchAnimal" mnemonicParsing="false" text="Search Animal " />
-                  <MenuItem fx:id="menuItem_AnimalStatus" mnemonicParsing="false" text="Animal Status" />
-               </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Animal Care">
-               <items>
-                  <MenuItem fx:id="menuItem_Groomers" mnemonicParsing="false" text="Groomers" />
-                  <MenuItem fx:id="menuItem_VetVisit" mnemonicParsing="false" text="Vet Visit" />
-               </items>
-            </Menu>
-         </items>
-      </MenuButton>
-      <GridPane layoutX="100.0" layoutY="110.0" prefHeight="180.0" prefWidth="400.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="Name" />
-            <Label text="Species" GridPane.rowIndex="1" />
-            <Label text="Sub-Species" GridPane.rowIndex="2" />
-            <TextField fx:id="textField_Name" GridPane.columnIndex="1" />
-            <TextField fx:id="textField_Species" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="textField_SubSpecies" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-         </children>
-      </GridPane>
-   </children>
+<AnchorPane prefHeight="400.0" prefWidth="600.0"
+  xmlns:fx="http://javafx.com/fxml/1"
+  fx:controller="sample.AddAnimal">
+  <children>
+    <MenuButton alignment="CENTER" contentDisplay="RIGHT" layoutX="10.0" layoutY="10.0"
+      mnemonicParsing="false" text="Adoptable Dogs" AnchorPane.bottomAnchor="365.0"
+      AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <font>
+        <Font size="18.0"/>
+      </font>
+      <items>
+        <MenuItem fx:id="menuItem_HomePage" mnemonicParsing="false" text="Home"/>
+        <Menu mnemonicParsing="false" text="Adoptable">
+          <items>
+            <MenuItem fx:id="menuItem_AdoptableDogs" mnemonicParsing="false" text="Adoptable Dogs"/>
+            <MenuItem fx:id="menuItem_AdoptableCats" mnemonicParsing="false" text="Adoptable Cats"/>
+          </items>
+        </Menu>
+        <Menu mnemonicParsing="false" text="Animal Info">
+          <items>
+            <MenuItem fx:id="menuItem_EditAnimal" mnemonicParsing="false" text="Edit Animal Info"/>
+            <MenuItem fx:id="menuItem_SearchAnimal" mnemonicParsing="false" text="Search Animal "/>
+            <MenuItem fx:id="menuItem_AnimalStatus" mnemonicParsing="false" text="Animal Status"/>
+          </items>
+        </Menu>
+        <Menu mnemonicParsing="false" text="Animal Care">
+          <items>
+            <MenuItem fx:id="menuItem_Groomers" mnemonicParsing="false" text="Groomers"/>
+            <MenuItem fx:id="menuItem_VetVisit" mnemonicParsing="false" text="Vet Visit"/>
+          </items>
+        </Menu>
+      </items>
+    </MenuButton>
+    <GridPane layoutX="100.0" layoutY="110.0" prefHeight="180.0" prefWidth="400.0">
+      <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+      </columnConstraints>
+      <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+      </rowConstraints>
+      <children>
+        <Label text="Name"/>
+        <Label text="Species" GridPane.rowIndex="1"/>
+        <Label text="Sub-Species" GridPane.rowIndex="2"/>
+        <TextField fx:id="textField_Name" GridPane.columnIndex="1"/>
+        <TextField fx:id="textField_Species" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+        <TextField fx:id="textField_SubSpecies" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+      </children>
+    </GridPane>
+  </children>
 </AnchorPane>
