--- a/src/sample/AnimalCare.fxml
+++ b/src/sample/AnimalCare.fxml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GroomersController">
+<AnchorPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.AnimalCareController">
   <children>
-    <MenuButton alignment="CENTER" contentDisplay="RIGHT" layoutX="30.0" layoutY="30.0" mnemonicParsing="false" text="Groomer" AnchorPane.bottomAnchor="365.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <MenuButton alignment="CENTER" contentDisplay="RIGHT" layoutX="30.0" layoutY="30.0" mnemonicParsing="false" text="Animal Care" AnchorPane.bottomAnchor="365.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <font>
         <Font size="18.0" />
       </font>
@@ -33,11 +34,7 @@
             <MenuItem fx:id="menuItem_AnimalStatus" mnemonicParsing="false" text="Animal Status" />
           </items>
         </Menu>
-        <Menu mnemonicParsing="false" text="Animal Care">
-          <items>
-            <MenuItem fx:id="menuItem_Groomers" mnemonicParsing="false" onAction="#handleGroomersMenuItem" text="Groomers" />
-            <MenuItem fx:id="menuItem_VetVisit" mnemonicParsing="false" text="Vet Visit" />
-          </items>
+        <Menu mnemonicParsing="false" onAction="#handleAnimalCareMenuItem" text="Animal Care">
         </Menu>
       </items>
     </MenuButton>
@@ -54,16 +51,14 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
       <children>
-        <Label text="Teeth" GridPane.rowIndex="1" />
-        <Label text="Nails Trimmed" GridPane.rowIndex="2" />
-        <Label text="Fur Trimmed" GridPane.rowIndex="3" />
-        <Label text="Ear Cleaning" GridPane.rowIndex="4" />
-        <Label text="Shampoo" />
-        <ComboBox fx:id="comboBox_Shampoo" prefWidth="150.0" GridPane.columnIndex="1" />
-        <ComboBox fx:id="comboBox_Teeth" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-        <ComboBox fx:id="comboBox_NailsTrimmed" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-        <ComboBox fx:id="comboBox_FurTrimmed" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-        <ComboBox fx:id="comboBox_EarCleaning" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <Label text="Last Groomer Visit" GridPane.rowIndex="1" />
+        <Label text="Schedule Vet Visit" GridPane.rowIndex="2" />
+        <Label text="Schedule Groomer Visit" GridPane.rowIndex="3" />
+        <Label text="Last Vet Visit" />
+            <TextField fx:id="textField_LastVetVisit" GridPane.columnIndex="1" />
+            <TextField fx:id="textField_LastGroomerVisit" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <DatePicker fx:id="datePicker_ScheduleVetVisit" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <DatePicker fx:id="datePicker_ScheduleGroomerVisit" GridPane.columnIndex="1" GridPane.rowIndex="3" />
       </children>
     </GridPane>
     <Button fx:id="comboBox_Enter" layoutX="399.0" layoutY="330.0" mnemonicParsing="false" text="Enter" />
