--- a/src/sample/AnimalSearch.fxml
+++ b/src/sample/AnimalSearch.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="sample.AnimalSearchController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.AnimalSearchController">
   <children>
     <MenuButton alignment="CENTER" contentDisplay="RIGHT" layoutX="20.0" layoutY="20.0" mnemonicParsing="false" text="Search Animal" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <font>
@@ -41,7 +41,7 @@
     </MenuButton>
     <TextField fx:id="textField_AnimalName" layoutX="52.0" layoutY="76.0" prefHeight="35.0" prefWidth="289.0" />
     <Button fx:id="button_AnimalSearch" layoutX="415.0" layoutY="76.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="83.0" text="Search" />
-    <TableView layoutX="28.0" layoutY="140.0" prefHeight="223.0" prefWidth="545.0">
+    <TableView fx:id="tableView_AvailabelAnimals" layoutX="28.0" layoutY="140.0" prefHeight="223.0" prefWidth="545.0">
       <columns>
         <TableColumn prefWidth="106.0" text="Name" />
         <TableColumn prefWidth="165.0" text="Breed" />
