--- a/src/sample/AnimalInformation.fxml
+++ b/src/sample/AnimalInformation.fxml
@@ -14,21 +14,21 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="sample.AnimalInformationController">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.AnimalInformationController">
   <children>
     <MenuButton alignment="CENTER" contentDisplay="RIGHT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Update Animal Information" AnchorPane.bottomAnchor="365.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <font>
         <Font size="18.0" />
       </font>
       <items>
-        <MenuItem fx:id="menuItem_HomePage" mnemonicParsing="false" text="Home"/>
+        <MenuItem fx:id="menuItem_HomePage" mnemonicParsing="false" text="Home" />
         <Menu mnemonicParsing="false" text="Adoptable">
           <items>
-            <MenuItem fx:id="menuItem_AdoptableDogs" mnemonicParsing="false" text="Adoptable Dogs" />
-            <MenuItem fx:id="menuItem_AdoptableCats" mnemonicParsing="false" text="Adoptable Cats" />
+            <MenuItem fx:id="menuItem_AdoptableDogs" mnemonicParsing="false" onAction="#handleAdoptableDogsMenuItem" text="Adoptable Dogs" />
+            <MenuItem fx:id="menuItem_AdoptableCats" mnemonicParsing="false" onAction="#handleAdoptableCatsMenuItem" text="Adoptable Cats" />
           </items>
         </Menu>
-        <Menu mnemonicParsing="false" text="Animal Info">
+        <Menu mnemonicParsing="false" onAction="#handleAnimalInfoMenuItem" onMenuValidation="#handleAnimalCareMenuItem" text="Animal Info">
           <items>
             <MenuItem fx:id="menuItem_EditAnimal" mnemonicParsing="false" text="Edit Animal Info" />
             <MenuItem fx:id="menuItem_SearchAnimal" mnemonicParsing="false" text="Search Animal " />
