Fixing the pages to connect

--- a/src/sample/HomePage.fxml
+++ b/src/sample/HomePage.fxml
@@ -54,6 +54,6 @@
     </MenuButton>
   </children>
   <stylesheets>
-    <URL value="@HomePageStyle.css" />
+    <URL value="@Style.css" />
   </stylesheets>
 </AnchorPane>
